--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prisma": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tiny-invariant": "^1.3.1"
+    "tiny-invariant": "^1.3.1",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.2",
