feat: a lot of 💩

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@remix-run/react": "^1.7.2",
     "@remix-run/vercel": "^1.7.2",
     "@vercel/node": "^2.4.4",
+    "lodash.filter": "^4.6.0",
+    "lodash.uniq": "^4.5.0",
     "prisma": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +23,8 @@
     "@remix-run/dev": "^1.7.2",
     "@remix-run/eslint-config": "^1.7.2",
     "@remix-run/serve": "^1.7.2",
+    "@types/lodash.filter": "^4.6.7",
+    "@types/lodash.uniq": "^4.5.7",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.23.1",
